Fixed CV layout and added scrollbar to body

--- a/styles/main.css
+++ b/styles/main.css
@@ -653,12 +653,57 @@ section {
         padding-left: 2rem;
     }
 
+    .cv-container {
+        display: grid;
+        grid-template-rows: auto auto;
+        width: 80%;
+        max-width: 960px;
+        margin: auto;
+    }
+
+    .cv-container section {
+        width: 100%;
+    }
+
+    .cv-container h2 {
+        font-size: 3rem;
+    }
+
+    .cv-container h3 {
+        font-size: 1.9rem;
+        color: rgb(70, 67, 108);
+    }
+
+    .cv-skills li {
+        font-size: 1.3rem;
+    }
+
+    .cv-upper {
+        border-bottom: 1px solid rgb(173, 197, 218);
+        margin-bottom: 2rem;
+    }
+
+    .cv-lower {
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+        gap: 3rem
+    }
+
+    .cv-lower main {
+        border-right: 1px solid rgb(173, 197, 218);
+        padding-right: 2rem;
+    }
+
+    .cv-skills {}
+
 }
 
 
 @media screen and (min-width: 900px) {
 
-
+    body {
+        overflow-y: scroll;
+    }
 
     .tech-logo {
         max-width: 40%;
